--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body onload="cgl_main()">
 <canvas id="cgl_canvas" width="0" height="0"></canvas>
-<div class="cgl_controls"><div class="cgl_controls_container"><button class="cgl_button" id="cgl_pause" onclick="cgl_pause()"><img src="img/pause.png"></img></button><button class="cgl_button" onclick="cgl_reset()"><img src="img/reset.png"></img></button><button class="cgl_button" onclick="cgl_erase()"><img src="img/erase.png"></img></button></div></div>
+<div class="cgl_controls"><div class="cgl_controls_container"><button class="cgl_button" id="cgl_pause" onclick="cgl_pause()"><img src="img/pause.png"></img></button><div class="cgl_slider_container"><img src="img/turtle.png"></img><input type="range" min="1" max="100" value="50" class="cgl_slider" id="cgl_speed_slider" oninput="cgl_set_speed()" /><img src="img/rabbit.png"></img></div><button class="cgl_button" onclick="cgl_reset()"><img src="img/reset.png"></img></button><button class="cgl_button" onclick="cgl_erase()"><img src="img/erase.png"></img></button></div></div>
 </body>
 </html>
